--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,10 @@
 .footer{
-  height: 2000px;
+  height: 60px;
   width: 100%;
-  background-color: black;
+  text-align: center;
+  background-color: darkcyan;
+}
+.footer h2{
+  margin: 0;
 }
 
